# is-admin-user

./: README.md  pyproject.toml
src/is_admin_user/: __init__.py  __main__.py  _cli.py  _core.py
tests/: test_cli.py  test_is_admin_user.py
