[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "is-admin-user"
version = "0.1.1"
description = "Check whether the current Python process is running as an administrator or root user."
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "GGN_2015" }
]
keywords = [
    "administrator",
    "admin",
    "root",
    "privileges",
    "windows",
    "linux",
    "macos"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed"
]

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
is-admin-user = "is_admin_user._cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
